Finally finished webpack setup

--- a/city-pollution-levels/src/index.html
+++ b/city-pollution-levels/src/index.html
@@ -6,15 +6,13 @@
         <title>City Pollution Levels</title>
         
         <link rel="stylesheet" href="style.css">
-        
-        <script src="app.js" defer></script>
     </head>
     <body>
         <header>
             <h1>City Pollution Levels</h1>
-            <form class="coords">
+            <form class="coords" id="formCoords">
                 <label for="coords">Coords</label>
-                <input type="text" name="coords" id="coords">
+                <input type="text" name="coords" id="coords" required placeholder="<Latitude> <Longitude>">
             </form>
         </header>
         <main>
