--- a/city-pollution-levels/src/index.html
+++ b/city-pollution-levels/src/index.html
@@ -11,14 +11,18 @@
     <body>
         <header>
             <h1>City Pollution Levels</h1>
-            <form class="coords" id="formCoords">
+            <form class="search-by-coords" id="formSearchByCoords">
                 <label for="lat">Latitude</label>
                 <label for="lon">Longitude</label>
 
                 <input type="text" name="lat" id="lat" required placeholder="0,0000">
                 <input type="text" name="lon" id="lon" required placeholder="0,0000">
 
-                <button type="reset">X</button>
+                <button type="reset">x</button>
+            </form>
+            <form class="search-by-city" id="formSearchByCity">
+                <label for="city">City</label>
+                <input type="search" name="city" id="city" required placeholder="City name here...">
             </form>
         </header>
         <main>
